# django-lucide-icons

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.ambient-package-update/: metadata.py
.ambient-package-update/templates/: README.md.tpl  pyproject.toml.tpl
.ambient-package-update/templates/docs/: conf.py.tpl
.ambient-package-update/templates/snippets/: installation.tpl  usage.tpl
.github/workflows/: ci.yml
django_lucide_icons/: __init__.py  apps.py
django_lucide_icons/templatetags/: lucide_tags.py
docs/: conf.py
example/: settings.py
scripts/windows/: install_requirements.ps1
